# qt6-composite-widgets

./: .gitignore  LICENSE  README.md  aaa.txt  pyproject.toml
src/qt6_composite_widgets/base/: composite_widget.py
src/qt6_composite_widgets/layouts/: __init__.py  group_widgets.py  h_group_box.py  h_section_bar.py  h_splitter_layout.py  v_group_box.py  v_section_bar.py  v_splitter_layout.py
src/qt6_composite_widgets/widgets/: language_select.py
tests/: test_language_select.py
